[package]
name = "garden"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ike = { path = "../ike" }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] } 
toml = "0.5.8" 
