[package]
name = "garden"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
glam = { version = "0.17.3", features = ["bytemuck"] }
ike = { path = "../ike" }
log = "0.4.14"
obj-rs = "0.6.3"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] } 
simple_logger = "1.13.0"
toml = "0.5.8"  
